--- a/Dockerfile-jetson
+++ b/Dockerfile-jetson
@@ -24,6 +24,7 @@ RUN apt-get update --fix-missing && \
     apt-get install -qy --no-install-recommends \
     build-essential \
     python3-pip python3-dev \
+    python3-setuptools \
     libopenblas-dev \
     libopenmpi2 \
     openmpi-bin \
@@ -36,7 +37,7 @@ RUN apt-get update --fix-missing && \
 #&& rm -rf /var/lib/apt/lists/*
 
 # install pip3 tools
-RUN pip3 install setuptools Cython wheel setuptools_rust transformers
+RUN pip3 install Cython wheel setuptools_rust transformers
 
 # PyCUDA
 ENV PATH="/usr/local/cuda/bin:${PATH}"
