--- a/Dockerfile-jetson
+++ b/Dockerfile-jetson
@@ -37,8 +37,8 @@ RUN apt-get update --fix-missing && \
 #&& rm -rf /var/lib/apt/lists/*
 
 # install pip3 tools
-RUN pip3 install Cython wheel setuptools_rust transformers
-
+RUN pip3 install Cython wheel setuptools_rust
+RUN pip3 install transformers
 # PyCUDA
 ENV PATH="/usr/local/cuda/bin:${PATH}"
 ENV LD_LIBRARY_PATH="/usr/local/cuda/lib64:${LD_LIBRARY_PATH}"
