Jetson docker crashes due to lack of resources. Specify memory and swap size. Allow to use all GPUs on the machine. --memory, --memory-swap, and --gpus will do.

--- a/Dockerfile-jetson
+++ b/Dockerfile-jetson
@@ -42,7 +42,7 @@ RUN git clone https://github.com/hasbegun/ParlAI.git && \
 
 # clean up
 WORKDIR workspace
-RUN rm -rf sentencepiece ParlAI
+RUN cd /workspace && rm -rf sentencepiece ParlAI
 
 # Create user "developer" with sudo powers
 RUN useradd -m developer && \
